--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,10 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+<div>
+<h1>Mes recompenses </h1>
+<img src="images\medal_bronze.png">
+</div>
 		
 	
 </body></html>
