--- a/hello.html
+++ b/hello.html
@@ -20,6 +20,11 @@
 <h1>Mes recompenses </h1>
 <img src="images\medal_bronze.png">
 </div>
+
+<div>
+<h1>Mes commandes gits</h1>
+git pull
+</div>
 		
 	
 </body></html>
